--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,10 @@ spring.jpa.show-sql=true
 
 # SSL
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# SECURITY
+#spring.security.user.name=skerdi
+#spring.security.user.password=skerdi
+
+spring.security.oauth2.client.registration.github.client-id=${SKERDI_GITHUB_APP_CLIENT_ID}
+spring.security.oauth2.client.registration.github.client-secret=${SKERDI_GITHUB_APP_CLIENT_SECRET}
